--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title: "idtechannel"
+description: ragam informasi dan tutorial serta panduan terbaik di kelas informasi dan teknologi.
 email: myarachma92@gmail.com
 timezone: UTC
 baseurl: "/"
