--- a/_config.yml
+++ b/_config.yml
@@ -36,9 +36,9 @@ authors:
 
 # Social
 social:
-  instagram: https://www.instagram.com/idtechannel/
+  youtube: https://www.youtube.com/@idtechannel/
   facebook: https://www.facebook.com/muhammadyusuf1992
-  twitter: https://twitter.com/idtechannel
+  tiktok: https://vt.tiktok.com/ZS877vHb3/
 
 defaults:
   -
