--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,7 @@ social:
   youtube: https://www.youtube.com/@idtechannel/
   facebook: https://www.facebook.com/muhammadyusuf1992
   tiktok: https://vt.tiktok.com/ZS877vHb3/
+  telegram: https://t.me/idtechannel
 
 defaults:
   -
