--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ social:
   facebook: https://www.facebook.com/muhammadyusuf1992
   tiktok: https://vt.tiktok.com/ZS877vHb3/
   telegram: https://t.me/idtechannel
-
+  whatsapp: https://chat.whatsapp.com/H2u5ABrvUoHHXZvh8lbitP
 defaults:
   -
     scope:
